# diceystuff

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: index.html
