[package]
name = "rustdice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.5"
rocket_auth = { version = "0.4.0" }
sha2 = { version = "0.10.8", features = [] }
